--- a/web/styles/vars.scss
+++ b/web/styles/vars.scss
@@ -51,6 +51,7 @@ $focus-color: rgb(255, 193, 8); // Definition 1
 $warning-color: #ffcc00; // Definition 1
 $success-color: #00ff99; // Definition 1
 $danger-color: #ff6384; // Definition 1
+$danger-color-dark: #670c20; // Definition 1
 $info-color: #3b82f6; // Added for PlayerStats module
 
 // --- Base Colors Block ---
