--- a/web/components/TeamTabNavigation/TeamTabNavigation.module.scss
+++ b/web/components/TeamTabNavigation/TeamTabNavigation.module.scss
@@ -241,7 +241,7 @@
 
   .seasonStatsHeaderLeft,
   .seasonStatsHeaderRight {
-    font-family: var(--font-family-accent, sans-serif);
+    font-family: v.$font-family-accent;
     font-size: 1.5rem;
     font-weight: 700;
     color: #07aae2;
