--- a/web/styles/TeamStatsPage.module.scss
+++ b/web/styles/TeamStatsPage.module.scss
@@ -80,6 +80,9 @@
 .teamName {
   font-size: 2.2rem;
   font-weight: 700;
+  font-family: v.$font-family-accent, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
   margin: 0;
   background: var(--accent);
   -webkit-background-clip: text;
